# stream-ai-rust

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
docs/: ejemplos-curl-y-respuestas.md  instalar-rust-linux.md  preguntas-prueba-entrevista.md
prompts/: deepener.md  detector.md  image-solver.md  opener.md
src/: app.rs  auth.rs  config.rs  error.rs  health.rs  main.rs  perf.rs  providers.rs  rate_limit.rs
src/relay/: body.rs  expand.rs  handler.rs  interview_pipeline.rs  messages.rs  mod.rs  prompts.rs
src/streaming/: anthropic.rs  anthropic_convert.rs  log.rs  mod.rs  openai_compat.rs  openai_responses.rs
