[package]
name = "interview-relay-sim"
version = "0.1.0"
edition = "2021"
description = "Simulación del assistant-relay (SSE) con JWT de corta duración y rate limit"

[dependencies]
axum = { version = "0.7", features = ["http2"] }
dotenvy = "0.15"
futures = "0.3"
http = "1"
jsonwebtoken = "9"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tower = { version = "0.4", features = ["util", "limit"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-stream = "0.3"
# default-features = false evita native-tls/OpenSSL (pkg-config, libssl-dev en Linux)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"
